--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,8 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+
 @layer base {
+  @font-face{
+  font-family: "DigitalNumbers";
+  src: url("/fonts/DigitalNumbers.ttf") format("truetype");
+}
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
